--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,10 @@
 # Folders
 _obj
 _test
+.vscode/
+.vs/
+bin/
+obj/
 
 # Architecture specific extensions/prefixes
 *.[568vq]
@@ -22,3 +26,7 @@ _testmain.go
 *.exe
 *.test
 *.prof
+*.sln
+*.njsproj
+*.pid
+*.hxproj
